Bug 337929 - Plasma-workspace build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Summary: Plasma-workspace build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL: https://qt.gitorious.org/qt/qtbase/co...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-30 22:40 UTC by Hrvoje Senjan
Modified: 2014-08-06 06:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-07-30 22:40:13 UTC
[  504s] In file included from /usr/include/qt5/QtCore/qsharedpointer.h:47:0,
[  508s]                  from /usr/include/qt5/QtGui/qpixmap.h:49,
[  508s]                  from /usr/include/qt5/QtGui/qbrush.h:53,
[  508s]                  from /usr/include/qt5/QtGui/qpalette.h:47,
[  508s]                  from /usr/include/qt5/QtWidgets/qwidget.h:49,
[  508s]                  from /usr/include/qt5/QtWidgets/qmenu.h:45,
[  508s]                  from /usr/include/qt5/QtWidgets/QMenu:1,
[  508s]                  from /home/abuild/rpmbuild/BUILD/plasma-workspace-5.0.40git~1406741768~3bd4f1e/containmentactions/applauncher/launch.h:23,
[  508s]                  from /home/abuild/rpmbuild/BUILD/plasma-workspace-5.0.40git~1406741768~3bd4f1e/containmentactions/applauncher/launch.cpp:20:
[  508s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KService]':
[  508s] /home/abuild/rpmbuild/BUILD/plasma-workspace-5.0.40git~1406741768~3bd4f1e/containmentactions/applauncher/launch.cpp:57:43:   required from here
[  508s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KService*' [-fpermissive]
[  508s]          : d(o.data())
[  508s]                      ^
[  508s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KServiceGroup]':
[  508s] /home/abuild/rpmbuild/BUILD/plasma-workspace-5.0.40git~1406741768~3bd4f1e/containmentactions/applauncher/launch.cpp:70:48:   required from here
[  508s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KServiceGroup*' [-fpermissive]
[  508s] containmentactions/applauncher/CMakeFiles/plasma_containmentactions_applauncher.dir/build.make:54: recipe for target 'containmentactions/applauncher/CMakeFiles/plasma_containmentactions_applauncher.dir/launch.cpp.o' failed
[  508s] make[2]: *** [containmentactions/applauncher/CMakeFiles/plasma_containmentactions_applauncher.dir/launch.cpp.o] Error 1
[  508s] make[2]: Leaving directory '/home/abuild/rpmbuild/BUILD/plasma-workspace-5.0.40git~1406741768~3bd4f1e/build'
[  508s] CMakeFiles/Makefile2:3621: recipe for target 'containmentactions/applauncher/CMakeFiles/plasma_containmentactions_applauncher.dir/all' failed
[  508s] make[1]: *** [containmentactions/applauncher/CMakeFiles/plasma_containmentactions_applauncher.dir/all] Error 2
[  508s] make[1]: *** Waiting for unfinished jobs....
Comment 1 Kevin Funk 2014-08-06 06:23:25 UTC
Git commit 0686e449ac4cf611ac3aa2e0bbf37b79aa172582 by Kevin Funk.
Committed on 06/08/2014 at 06:23.
Pushed by kfunk into branch 'master'.

Make compile with Qt 5.4

M  +3    -3    dataengines/apps/appsource.cpp
M  +2    -2    kioslave/applications/kio_applications.cpp

http://commits.kde.org/plasma-workspace/0686e449ac4cf611ac3aa2e0bbf37b79aa172582