Make compile with Qt 5.4

BUG: 337929