dataengines/apps/appsource.cpp
@@ -73,11 +73,11 @@ void AppSource::updateGroup()
     QStringList entries;
     foreach (KSycocaEntry::Ptr p, m_group->entries(true, false, true)) {
         if (p->isType(KST_KService)) {
-            const KService::Ptr service = p;
+            const KService::Ptr service(static_cast<KService*>(p.data()));
             entries << service->storageId();
         } else if (p->isType(KST_KServiceGroup)) {
-            const KServiceGroup::Ptr service = p;
-            entries << service->entryPath();
+            const KServiceGroup::Ptr serviceGroup(static_cast<KServiceGroup*>(p.data()));
+            entries << serviceGroup->entryPath();
         } else if (p->isType(KST_KServiceSeparator)) {
             entries << "---";
         } else {
